# shmtx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/shmtx/: shmtx.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
